--- a/deploy/crds/localstorage_v1alpha1_filesystem_crd.yaml
+++ b/deploy/crds/localstorage_v1alpha1_filesystem_crd.yaml
@@ -9,5 +9,5 @@ spec:
     listKind: FilesystemList
     plural: filesystems
     singular: filesystem
-  scope: Namespaced
+  scope: Cluster
   version: v1alpha1
